# gen-ai-sql-generator

./: .gitignore  README.md  create_database.py  frontend.py  main.py  pyproject.toml
