[project]
name = "gen-ai-sql-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-ollama>=1.1.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
]
